--- a/Templates/view-post.html
+++ b/Templates/view-post.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="post">
-    <div class="post-title">{{post.title}}</div>
+    <div class="post-title">{{post.title}}</div> #Need to add permalink
     <pre class="post-body">{{post.post_body}}</pre>
 </div>
 
