Main page and new post work correctly, including error message.

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -50,6 +50,7 @@
             <a href="/">Maniacal Musings Blog</a>
         </h1>
         <h3>Medieval Thoughts For A Modern World</h3>
+        <a href="/newpost">Create New Post</a>
 
         {% block content %}
         {% endblock %}
