permalinks set up from post-creation and titles of posts on mainpage.

--- a/Templates/view-post.html
+++ b/Templates/view-post.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="post">
-    <div class="post-title">{{post.title}}</div> #Need to add permalink
-    <pre class="post-body">{{post.post_body}}</pre>
+    <div class="post-title">{{post_id.title}}</div>
+    <pre class="post-body">{{post_id.post_body}}</pre>
 </div>
 
 {% endblock %}
