--- a/Templates/base.html
+++ b/Templates/base.html
@@ -41,7 +41,7 @@
             font-size: 17px;
           }
           .post-body {
-              border: 2px soliblack
+              border: 2px solid black
           }
         </style>
     </head>
@@ -51,6 +51,7 @@
         </h1>
         <h3>Medieval Thoughts For A Modern World</h3>
         <a href="/newpost">Create New Post</a>
+        <hr>
 
         {% block content %}
         {% endblock %}
