--- a/Templates/main-blog.html
+++ b/Templates/main-blog.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 
+
 {% for post in posts %}
   <div class="post">
-    <div class="post-title">{{post.title}}</div>
+    <a class="post-title" href='/blog/{{post.key().id()}}'>{{post.title}}</a>
     <pre class="post-body">{{post.post_body}}</pre>
   </div>
 {% endfor %}
